--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>PROJEK ILLEGAL&#174;</title>
+  <meta name="description" content="&#x201C;Mimpi jadi Realiti&#x201D; <i>#barangillegal</i>">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="icon.svg">
