--- a/shinobi/index.html
+++ b/shinobi/index.html
@@ -4,9 +4,11 @@
   <meta charset="UTF-8">
   <title>SHINOBI V2 - PROJEK ILLEGAL&#174;</title>
   <meta name="description" content="&#x201C;Mimpi jadi Realiti&#x201D; #barangillegal">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.1/animate.min.css'>
   <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css'>
   <link href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css" rel="stylesheet" >
+  <link href="bootstrap.css" rel="stylesheet">
   <link rel="stylesheet" href="./style.css">
   <link rel="shortcut icon" href="icon.svg">
   
@@ -15,30 +17,30 @@
 <div class="cpc-viewport" data-bind="style: {display: 'block'}">
 	<div class="cpc-table-cell">
 		<div class="cpc-table-align">
-			<main role="main" class="cpc-main">
-				<div data-bind="attr: {class: data.currentShoeOption().className + ' cpc-product-imgs'}">
-					<div class="cpc-nike-tick">
+		 <main role="main" class="cpc-main">
+			<div class="container">
+			  <div class="row">
+				<div data-bind="attr: {class: data.currentShoeOption().className + ' col' + ' previewleft'}">
+				  <div class="cpc-nike-tick">
 						<img src="assets/logo_white.svg">
 					</div>
-					<div class="cpc-img-wrapper">
-						<div class="slider">
-							<div class="slide_viewer">
-								<div class="slide_group">
-									<div class="slide">
-										<img class="cpc-product-shoe-img" data-bind="attr: {src: data.currentShoeOption().shoeImage}" src="#" />
-									</div>
-									<div class="slide">
-										<img class="cpc-product-shoe-img" data-bind="attr: {src: data.currentShoeOption().RRP}" src="#" />
-									</div>
+					<div class="slider">
+						<div class="slide_viewer">
+							<div class="slide_group">
+								<div class="slide">
+									<img class="cpc-product-shoe-img" data-bind="attr: {src: data.currentShoeOption().shoeImage}" src="#" />
+								</div>
+								<div class="slide">
+									<img class="cpc-product-shoe-img" data-bind="attr: {src: data.currentShoeOption().RRP}" src="#" />
 								</div>
 							</div>
 						</div>
-						<div class="slide_buttons">
-						</div>
+					</div>
+					<div class="slide_buttons">
 					</div>
 				</div>
-				<div class="cpc-product-info changeBG">
-					<article class="animated fadeInRight">
+				<div class="col cpc-product-info">
+				  <article class="animated fadeInRight">
 						<section class="cpc-product-header">
 							<h1 class="cpc-product-title">SHINOBI V2</h1>
 							<div class="cpc-rating-container">
@@ -79,10 +81,13 @@
 						</section>
 					</article>
 				</div>
-			</main>
+			 </div>
+			</div>
+		 </main>
 		</div>
 	</div>
 </div>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 <script src='https://cdnjs.cloudflare.com/ajax/libs/knockout/3.4.0/knockout-min.js'></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.js"></script>
 <script  src="./script.js"></script>
