--- a/shinobi/index.html
+++ b/shinobi/index.html
@@ -20,7 +20,7 @@
 		 <main role="main" class="cpc-main">
 			<div class="container">
 			  <div class="row">
-				<div data-bind="attr: {class: data.currentShoeOption().className + ' col' + ' previewleft'}">
+				<div data-bind="attr: {class: data.currentShoeOption().className + ' col-sm' + ' previewleft'}">
 				  <div class="cpc-nike-tick">
 						<img src="assets/logo_white.svg">
 					</div>
@@ -39,7 +39,7 @@
 					<div class="slide_buttons">
 					</div>
 				</div>
-				<div class="col cpc-product-info">
+				<div class="col-sm cpc-product-info">
 				  <article class="animated fadeInRight">
 						<section class="cpc-product-header">
 							<h1 class="cpc-product-title">SHINOBI V2</h1>
