--- a/shinobi/index.html
+++ b/shinobi/index.html
@@ -14,6 +14,7 @@
   
 </head>
 <body id="changeBG">
+<div id="preloader"></div>
 <div class="cpc-viewport" data-bind="style: {display: 'block'}">
 	<div class="cpc-table-cell">
 		<div class="cpc-table-align">
